Fix layout problem in Chromium/Edge
<footer> wans't at the bootom, but meshed withing <body>, but only on
Chromium-based browser.

It seems to be because height: 100% is interpreted as max-height, but
weird.

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -3,12 +3,9 @@ html {
 }
 
 body {
-  height: 100%;
-}
-
-body {
   display: flex;
   flex-flow: column;
+  min-height: 100%;
 
   margin: 0 auto;
   max-width: $content-width;
